- Fixed issue about displaying the online users in sidebar
- Fixed issue about unit names containing double quotes in IE
- Fixed issue with assigning skills to all job positions 'described as' (#785)
- Removed group reports link from sidebar in community++ edition
- Fixed issue about displaying certificate expiration title in community++ edition

=== Version 3.6.7 build 9006 ===
- Added latest TCPDF libraries
- Added brand new PDF certificates
- Converted PDF reports to use the new pdf libraries
- Updated calendar to support for globals, group, course, branch and private events
- New time reporting infrastructure
- Enabled restriction on access to content files without a user being logged in
- Added handle to move blocks in control panel and dashboard
- Added new tooltip libraries
- Added new theme: blue_html5 and made it default
- Added new module: workbook
- Added new module: jobs manager (Enterprise edition)
- Added new module: crossword (thanks skippybosco)
- Added new module: administrator tools
- Added new module: journal
- Added capability for mass deleting personal messages
- Added bulk course completion option
- 'All material' is now by default selected
- Projects now allow for decimal or fractional score
- Added option in system settings for periodic updater period
- Added projects icon on the student's control panel so that the user can access expired projects
- Expand/collapse status in "My courses" list now remembers status via cookie
- Upgraded tinymce editor to 3.3.9.2
- Community++ edition now supports subscriptions (Community++ and above editions)
- Added question response details option in test reports (Community++ and above editions)
- Added checkbox in course/lessons reports to get users from subbranches as well (Enterprise edition)
- Added supervisor approval for course enrollments functionality (Enterprise edition)
- Added new user form page and PDF export (Enterprise edition)