@@ -271,15 +271,7 @@ if (isset($_GET['delete_project']) && in_array($_GET['delete_project'], array_ke
         }
         //Default url for the file manager
         $url = basename($_SERVER['PHP_SELF']).'?ctg=projects&'.(isset($_GET['edit_project']) ? 'edit_project='.$_GET['edit_project'] : 'add_project=1');
-  $filesystem = new FileSystemTree($basedir, true);
-  $filesystemIterator = new EfrontFileOnlyFilterIterator(new EfrontNodeFilterIterator(new ArrayIterator($filesystem -> tree)));
-
-  foreach ($filesystemIterator as $key => $value) {
-      $value['id'] == -1 ? $identifier = $value['path'] : $identifier = $value['id'];
-    $value -> offsetSet(_INSERT, '<div style="text-align:center"><img src = "images/16x16/arrow_right.png" alt = "'._INSERTEDITOR.'" title = "'._INSERTEDITOR.'" class = "ajaxHandle" onclick = "insert_editor(this, $(\'span_'.urlencode($identifier).'\').innerHTML)" /></div>');
-  }
-  $extraColumns = array(_INSERT);
-        //$extraFileTools = array(array('image' => 'images/16x16/arrow_right.png', 'title' => _INSERTEDITOR, 'action' => 'insert_editor'));
+        $extraFileTools = array(array('image' => 'images/16x16/arrow_right.png', 'title' => _INSERTEDITOR, 'action' => 'insert_editor'));
         /**The file manager*/
         include "file_manager.php";
     } catch (Exception $e) {
