@@ -210,7 +210,7 @@ function getPeriodicData() {
      var time = translations['userjustloggedin'];
     }
 
-    str += '<a href = "javascript:void(0)" alt="'+s.name+' '+s.surname+'" title="'+s.name+' '+s.surname+'" onclick = "eF_js_showDivPopup(\'\', 0, \'user_table\');';
+    str += '<a href = "javascript:void(0)" onclick = "eF_js_showDivPopup(\'\', 0, \'user_table\');';
     str += 'show_user_box(\'' + translations['user'] + ' '+s.login+'\', \''+s.login+'\', \'' + translations['sendmessage'] + '\', \'' + translations['web'] + '\', \''+s.user_type+'\', \''+time+'\', \''+translations['user_stats']+'\',\''+translations['user_settings']+'\',\''+translations['logout_user']+'\');">';
     if (s.user_type == 'administrator') {
      str += '<span style = "color:magenta">'+(s.formattedLogin.replace('_'+s.user_type.toUpperCase(), translations['_'+s.user_type.toUpperCase()]))+'</span>';
