@@ -29,3 +29,26 @@ function onActivate(el, response) {
   top.sideframe.location.reload();
  }
 }
+
+function ajaxPost(login, el, table_id) {
+ var url = location.toString();
+ var parameters = {postAjaxRequest:1, method: 'get'};
+    if (login) {
+        var userType = $('type_'+login).options[$('type_'+login).selectedIndex].value;
+        Object.extend(parameters, {login: login, user_type: userType});
+    } else if (table_id && table_id == 'usersTable') {
+        el.checked ? Object.extend(parameters, {addAll: 1}) : Object.extend(parameters, {removeAll: 1});
+        if ($(table_id+'_currentFilter')) {
+         Object.extend(parameters, {filter: $(table_id+'_currentFilter').innerHTML});
+        }
+    }
+ ajaxRequest(el, url, parameters);
+}
+
+if ($('module_administrator_tools_autocomplete_lessons_div')) {
+ new Ajax.Autocompleter("autocomplete",
+         "module_administrator_tools_autocomplete_lessons_div",
+         "ask.php?ask_type=lessons", {paramName: "preffix",
+              afterUpdateElement : function (t, li) {document.location = document.location.toString().replace(/&tab=\w*/g, '').replace(/&lessons_ID=\d*/g, '')+"&tab=set_course_lesson_users"+"&lessons_ID="+li.id;},
+              indicator : "busy"});
+}
